# MLOps_project

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  infer.dvc  model.onnx  pyproject.toml
.dvc/: config
MLOps_project/: best_model.xyz  client_triton.py  convert_model.py  data.py  infer.py  model.py  run_server.py  server_test.py  test_rez.csv  train.py  utils.py
MLOps_project/outputs/2023-10-29/13-07-43/.hydra/: hydra.yaml
MLOps_project/outputs/2023-10-29/13-09-17/.hydra/: config.yaml  hydra.yaml
MLOps_project/src/: dataset_generator.py
conf/: config.py  config.yaml
conf/running_type/: infer.yaml
infer/: .gitignore  test_rez.csv.dvc
model_repository/onnx-model/: config.pbtxt
model_repository/onnx-model/1/: model.onnx.dvc
models/: .gitignore  best_model.onnx.dvc  best_model.xyz.dvc  onnx_model.dvc
outputs/2023-10-29/13-09-53/.hydra/: hydra.yaml
outputs/2023-10-29/13-10-58/.hydra/: hydra.yaml
outputs/2023-10-29/13-15-25/.hydra/: hydra.yaml
outputs/2023-10-29/13-15-57/.hydra/: hydra.yaml
outputs/2023-10-29/13-16-09/.hydra/: config.yaml  hydra.yaml
outputs/2023-10-29/13-17-42/.hydra/: hydra.yaml
outputs/2023-10-29/13-21-34/.hydra/: config.yaml  hydra.yaml
outputs/2023-10-29/13-57-24/.hydra/: hydra.yaml
outputs/2023-10-29/13-58-58/.hydra/: config.yaml  hydra.yaml
outputs/2023-10-29/13-59-18/.hydra/: config.yaml  hydra.yaml
outputs/2023-11-28/11-28-57/.hydra/: config.yaml  hydra.yaml
outputs/2023-11-28/11-30-52/.hydra/: hydra.yaml
outputs/2023-11-28/11-31-23/.hydra/: hydra.yaml
outputs/2023-11-28/11-31-51/.hydra/: hydra.yaml
outputs/2023-11-28/11-34-21/.hydra/: config.yaml  hydra.yaml
outputs/2023-11-28/11-53-00/.hydra/: hydra.yaml
outputs/2023-11-28/11-54-40/.hydra/: hydra.yaml
outputs/2023-11-28/11-55-42/.hydra/: hydra.yaml
outputs/2023-11-28/11-56-32/.hydra/: config.yaml  hydra.yaml
outputs/2023-11-28/11-56-44/.hydra/: hydra.yaml
outputs/2023-11-28/12-15-47/.hydra/: config.yaml  hydra.yaml
outputs/2023-11-28/12-20-16/.hydra/: config.yaml  hydra.yaml
tests/: test.ipynb
