[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = "project for mlops course at mipt"
authors = ["xxamxam <latypov.im@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
torch = "^2.0.1"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
