[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = "project for mlops course at mipt"
authors = ["xxamxam <latypov.im@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
lightning = "^2.1.2"
torch = "<=2.0"
mlflow = "^2.8.1"
onnxruntime = "^1.16.3"
dvc-gdrive = "^2.20.0"
onnx = "^1.15.0"
pydantic = "<=1.9"
fire = "^0.5.0"


[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
pytest = "^6.2.5"

[tool.black]
line-length = 90
target-version = ["py39"]

[tool.isort]
src_paths = ["ds_project"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
